Bug 1572385 - Check raw flags_ field offset in JSString::staticAsserts to fix 64-bit big-endian platforms. r=tcampbell

The length_ and flags_ fields are private so I added a protected offsetOf* accessor.

Differential Revision: https://phabricator.services.mozilla.com/D41353